--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             margin: 10px;
             padding: 10px;
             border: 1px solid #ddd;
-            width: 150px;
+            width: 200px;
             background-color: #fff;
             border-radius: 5px;
         }
@@ -37,11 +37,25 @@
 <body>
     <h1>Dragon Ball Draft Game</h1>
     <div id="teams">
-        <div class="team" id="team1"><h2>Team 1</h2><ul id="team1-list"></ul></div>
-        <div class="team" id="team2"><h2>Team 2</h2><ul id="team2-list"></ul></div>
-        <div class="team" id="team3"><h2>Team 3</h2><ul id="team3-list"></ul></div>
+        <div class="team" id="team1">
+            <h2>Team 1</h2>
+            <select id="team1-select"></select>
+            <button onclick="draftCharacter(1)">Draft Character</button>
+            <ul id="team1-list"></ul>
+        </div>
+        <div class="team" id="team2">
+            <h2>Team 2</h2>
+            <select id="team2-select"></select>
+            <button onclick="draftCharacter(2)">Draft Character</button>
+            <ul id="team2-list"></ul>
+        </div>
+        <div class="team" id="team3">
+            <h2>Team 3</h2>
+            <select id="team3-select"></select>
+            <button onclick="draftCharacter(3)">Draft Character</button>
+            <ul id="team3-list"></ul>
+        </div>
     </div>
-    <button onclick="draftCharacter()">Draft Next Character</button>
     <div id="character-log"></div>
 
     <script>
@@ -90,27 +104,6 @@
 
         let teams = [[], [], []];
         let availableCharacters = [...characters];
-        let currentTeam = 0;
 
-        function draftCharacter() {
-            if (availableCharacters.length === 0) {
-                document.getElementById("character-log").innerText = "Draft complete!";
-                return;
-            }
-
-            const index = Math.floor(Math.random() * availableCharacters.length);
-            const character = availableCharacters.splice(index, 1)[0];
-            teams[currentTeam].push(character);
-
-            const teamList = document.getElementById(`team${currentTeam + 1}-list`);
-            const listItem = document.createElement("li");
-            listItem.textContent = `${character.name} (Power: ${character.power_level}, Ability: ${character.special_ability})`;
-            teamList.appendChild(listItem);
-
-            document.getElementById("character-log").innerText = `Team ${currentTeam + 1} picked ${character.name}!`;
-
-            currentTeam = (currentTeam + 1) % 3;
-        }
-    </script>
-</body>
-</html>
+        // Populate dropdowns with characters
+      
